Fixed picture orientation error Fixed error with pics in information section being vertical instead of horizontal. This was due to </div> being typed which was not associated with a <div> and so was closing another section which should not have been. Next steps is too edit picture gap, sizing and color

--- a/styles.css
+++ b/styles.css
@@ -108,8 +108,8 @@ button {
 }
 .infoContainer {
     display: flex;
-    flex-wrap: wrap;
-   justify-content: space-around;
+    flex-direction:row;
+    justify-content: space-between;
   
 }
 .infoTitle{
@@ -124,7 +124,7 @@ button {
 
 .infoPics img{
     display: flex;
-    max-width: 200px;
+    width: 200px;
     border: 3px solid skyblue;
     border-radius: 10px;
     justify-content: center;
